<resources>
    <string name="app_name">Family App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_map">MainMap</string>
    <string name="title_activity_mapper">MapperActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="phone_hint">MOBILE NUMBER</string>
    <string name="country_code">+254</string>
    <string name="get_started">Get Started</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="sign_out">Sign Out</string>
    <string name="status_code_sent">Code sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification success</string>
    <string name="signed_out">Signed Out</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_in">Signed-in</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="code_hint">4321</string>
    <string name="loading">Loading..</string>
    <string name="title_activity_family_view">FamilyView</string>
    <string name="title_activity_add_family">AddFamily</string>
    <string name="title_activity_my_profile">MyProfile</string>
</resources>
