<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.PhoneAuthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/landbg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#77000000" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="12dp"
        android:weightSum="7.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edged_shape_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mLoginCountryCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="?selectableItemBackground"
                android:padding="12dp"
                android:text="@string/country_code" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/gws_color_material_grey_500" />

            <EditText
                android:id="@+id/mLoginPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@android:color/transparent"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:padding="12dp" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/gws_color_material_grey_500" />
            <EditText
                android:id="@+id/mLoginCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                android:hint="@string/code_hint"
                android:inputType="phone"
                android:padding="12dp" />

        </LinearLayout>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/mLoginDialogBox"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:mpb_progressStyle="horizontal" />

        <Button
            android:id="@+id/mLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edged_shape_button"
            android:padding="5dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/phone_auth_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0"
            android:visibility="gone">

            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                android:layout_weight="1.0"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/field_verification_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:layout_weight="1.0"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3.0"
            android:visibility="gone">

            <Button
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:id="@+id/button_start_verification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_phone_auth"/>

            <Button
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:id="@+id/button_verify_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_phone_auth"/>

            <Button
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:id="@+id/button_resend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/resend_phone_auth"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/signed_in_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="1.0">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>
    <TextView
        android:id="@+id/status"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/signed_out"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/detail"
        style="@style/ThemeOverlay.MyTextDetail"
        tools:text="Firebase User ID: 123456789abc"
        android:visibility="gone"/>

</RelativeLayout>